--- a/resources/css/site.css
+++ b/resources/css/site.css
@@ -1115,8 +1115,12 @@ a.text-center.btn.btn-outline-light.btn__book {
 .carousel-caption {
     position: initial;
 }
-
-
 .carousel-control-prev, .carousel-control-next {
     color: black;
 }
+.btn-hockney{color:#fff;background-color:#299942;border-color:#299942}
+.btn-hockney:hover{color:#fff;background-color:#299942;border-color:#299942}
+.btn-hockney:focus,.btn-hockney.focus{box-shadow:0 0 0 .2rem rgba(0,90,90,0.5)}
+.btn-hockney.disabled,.btn-hockney:disabled{color:#fff;background-color:#299942;border-color:#299942}
+.btn-hockney:not(:disabled):not(.disabled):active,.btn-hockney:not(:disabled):not(.disabled).active,.show>.btn-hockney.dropdown-toggle{color:#fff;background-color:#299942;border-color:#299942}
+.btn-hockney:not(:disabled):not(.disabled):active:focus,.btn-hockney:not(:disabled):not(.disabled).active:focus,.show>.btn-hockney.dropdown-toggle:focus{box-shadow:0 0 0 .2rem rgba(0,90,90,0.5)}
