--- a/resources/css/site.css
+++ b/resources/css/site.css
@@ -1082,12 +1082,22 @@ a.text-center.btn.btn-outline-light.btn__book {
     min-height: 40vh;
     background-color: #2a9941;
 }
+.ttn_header {
+    min-height: 40vh;
+    background-color: #8695be;
+}
 
 .hockney_top_banner {
     min-height: 40vh;
     margin-top: 60px;
     background-color: #179d41;
 }
+.ttn_top_banner {
+    min-height: 40vh;
+    margin-top: 60px;
+    background-color: #8695be;
+}
+
 
 .hockney__link a {
     text-decoration: none;
@@ -1107,6 +1117,15 @@ a.text-center.btn.btn-outline-light.btn__book {
     background-position: center;
     background-size: contain;
 }
+.ttn__link {
+    background: url('https://fitz-cms-images.s3.eu-west-2.amazonaws.com/ttn_right_panel.jpg');
+    min-height: 400px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+}
+
 .hockney__link__href {
     display: block;
     height: 100%;
