--- a/resources/css/site.css
+++ b/resources/css/site.css
@@ -1150,3 +1150,10 @@ a.text-center.btn.btn-outline-light.btn__book {
 .star_rating__color {
     color: #299942;
 }
+
+.btn-ttn{color:#fff;background-color:#8695be;border-color:#8695be}
+.btn-ttn:hover{color:#fff;background-color:#8695be;border-color:#8695be}
+.btn-ttn:focus,.btn-ttn.focus{box-shadow:0 0 0 .2rem rgba(0,90,90,0.5)}
+.btn-ttn.disabled,.btn-ttn:disabled{color:#fff;background-color:#8695be;border-color:#8695be}
+.btn-ttn:not(:disabled):not(.disabled):active,.btn-ttn:not(:disabled):not(.disabled).active,.show>.btn-ttn.dropdown-toggle{color:#fff;background-color:#8695be;border-color:#8695be}
+.btn-ttn:not(:disabled):not(.disabled):active:focus,.btn-ttn:not(:disabled):not(.disabled).active:focus,.show>.btn-ttn.dropdown-toggle:focus{box-shadow:0 0 0 .2rem rgba(0,90,90,0.5)}
