Update css text size

--- a/resources/css/site.css
+++ b/resources/css/site.css
@@ -161,8 +161,8 @@ body {
 }
 
 h3, h2 {
-    font-family: 'PT Sans', sans-serif;
-    font-weight: 700;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 500;
 }
 
 h3 {
