--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,9 +1,11 @@
 // Fonts
 @import url('https://fonts.googleapis.com/css2?family=PT+Sans:wght@700&family=Libre+Baskerville:ital@1&family=Rubik&Roboto:wght@300;400;500;700&Space+Grotesk:wght@500&display=swap');
+@import "@fortawesome/fontawesome-free/css/all.css";
 
-// Variables
-@import 'variables';
+
 
 // Bootstrap
+@import '~bootstrap/scss/functions';
+// Variables
+@import 'variables';
 @import '~bootstrap/scss/bootstrap';
-@import "@fortawesome/fontawesome-free/css/all.css";
