--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,8 +1,12 @@
 // Body
 $body-bg: #a3c1ad;
 
+// Navbar
+$navbar-default-bg: #a3c1ad;
+$bg-nav: #a3c1ad;
+
 // Typography
-$font-family-sans-serif: 'Nunito', sans-serif;
+$font-family-sans-serif: 'Roboto', sans-serif;
 $font-size-base: 1.0rem;
 $line-height-base: 1.6;
 
