Refactor floor plan rendering Create components and move code.

--- a/resources/css/site.css
+++ b/resources/css/site.css
@@ -507,13 +507,8 @@ a.share-click {
     height: 500px;
 }
 
-ul#floor-plans {
+.floor-plans > li {
     list-style: none;
-    display: inline-block;
-    columns: 2;
-    -webkit-columns: 3;
-    width: 100%;
-    -moz-columns: 2;
 }
 
 blockquote {
