Large refactor for speed 1. Remove jquery closes #364 2. Remove fontawesome closes #365 3. Install purgecss closes #366 4. Remove @fa directive closes #367 5. Optimise bootstrap with webpack #closes 370 6. Install tinysvgicons #closes #368 7. Install blade icons #closes #369

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,8 +1,7 @@
 // Fonts
 @import url('https://fonts.googleapis.com/css2?family=PT+Sans:wght@700&family=Libre+Baskerville:ital@1&family=Rubik&Roboto:wght@300;400;500;700&Space+Grotesk:wght@500&display=swap');
-@import "@fortawesome/fontawesome-free/css/all.css";
-// Bootstrap
-@import '~bootstrap/scss/functions';
 // Variables
 @import 'variables';
-@import '~bootstrap/scss/bootstrap';
+
+@import "~bootstrap/scss/bootstrap";
+
