--- a/resources/css/site.css
+++ b/resources/css/site.css
@@ -207,87 +207,6 @@ video {
     color: #000;
 }
 
-.cd-nugget-info {
-    text-align: center;
-    position: absolute;
-    width: 100%;
-    height: 50px;
-    line-height: 50px;
-    top: 0;
-    left: 0;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-}
-
-.cd-nugget-info a {
-    position: relative;
-    font-size: 14px;
-    color: #e86256;
-    -webkit-transition: all 0.2s;
-    -moz-transition: all 0.2s;
-    transition: all 0.2s;
-}
-
-.cd-nugget-info a:hover {
-    opacity: .8;
-}
-
-.cd-nugget-info span {
-    vertical-align: middle;
-    display: inline-block;
-}
-
-.cd-nugget-info span svg {
-    display: block;
-}
-
-.cd-nugget-info .cd-nugget-info-arrow {
-    fill: #e86256;
-}
-
-.cd-top {
-    display: inline-block;
-    height: 40px;
-    width: 40px;
-    position: fixed;
-    bottom: 40px;
-    right: 10px;
-    -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
-    /* image replacement properties */
-    overflow: hidden;
-    text-indent: 100%;
-    white-space: nowrap;
-    background: rgba(232, 98, 86, 0.8) url(../images/layouts/arrow.svg) no-repeat center 50%;
-    visibility: hidden;
-    opacity: 0;
-    -webkit-transition: opacity .3s 0s, visibility 0s .3s, background-color .3s 0s;
-    transition: opacity .3s 0s, visibility 0s .3s, background-color .3s 0s;
-}
-
-.cd-top.cd-top--show,
-.cd-top.cd-top--fade-out,
-.cd-top:hover {
-    -webkit-transition: opacity .3s 0s, visibility 0s 0s, background-color .3s 0s;
-    transition: opacity .3s 0s, visibility 0s 0s, background-color .3s 0s;
-}
-
-.cd-top.cd-top--show {
-    /* the button becomes visible */
-    visibility: visible;
-    opacity: 1;
-}
-
-.cd-top.cd-top--fade-out {
-    /* if the user keeps scrolling down, the button is out of focus and becomes less visible */
-    opacity: .5;
-}
-
-.cd-top:hover {
-    background-color: #e86256;
-    opacity: 1;
-}
-
 @media only screen and (min-width: 768px) {
     .logo {
         margin-top: 100px !important;
@@ -985,8 +904,7 @@ ul.text-center.conversation-footer {
 }
 
 .panel-heading a:before {
-    content: "\f107";
-    font-family: "Font Awesome 6 Free";
+    content: "+";
     font-weight: 900;
     float: right;
     transition: all 0.9s;
@@ -1157,10 +1075,15 @@ a.text-center.btn.btn-outline-light.btn__book {
 
 .btn-ttn{color:#fff;background-color:#8695be;border-color:#8695be}
 .btn-ttn:hover{color:#fff;background-color:#8695be;border-color:#8695be}
-.btn-ttn:focus,.btn-ttn.focus{box-shadow:0 0 0 .2rem rgba(0,90,90,0.5)}
+.btn-ttn:focus,.btn-ttn.focus{box-shadow:0 0 0 .2rem rgb(126, 143, 187)
+}
 .btn-ttn.disabled,.btn-ttn:disabled{color:#fff;background-color:#8695be;border-color:#8695be}
 .btn-ttn:not(:disabled):not(.disabled):active,.btn-ttn:not(:disabled):not(.disabled).active,.show>.btn-ttn.dropdown-toggle{color:#fff;background-color:#8695be;border-color:#8695be}
-.btn-ttn:not(:disabled):not(.disabled):active:focus,.btn-ttn:not(:disabled):not(.disabled).active:focus,.show>.btn-ttn.dropdown-toggle:focus{box-shadow:0 0 0 .2rem rgba(0,90,90,0.5)}
+.btn-ttn:not(:disabled):not(.disabled):active:focus,.btn-ttn:not(:disabled):not(.disabled).active:focus,.show>.btn-ttn.dropdown-toggle:focus{box-shadow:0 0 0 .2rem rgb(119, 138, 184)
+}
 .footer__info {
     width: 330px;
+}
+.eden {
+    filter: invert(1) sepia(1) saturate(5) hue-rotate(175deg);
 }
