Fix breadcrumbs and images 1. Change routes 2. Add breadcrumbs classes Closes #401 Closes #400

--- a/resources/css/site.css
+++ b/resources/css/site.css
@@ -1087,3 +1087,6 @@ a.text-center.btn.btn-outline-light.btn__book {
 .eden {
     filter: invert(1) sepia(1) saturate(5) hue-rotate(175deg);
 }
+.card-img-top {
+    height: 100% !important;
+}
