--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -23,3 +23,7 @@ $teal: #4dc0b5;
 $cyan: #6cb2eb;
 
 $breadcrumb-divider: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='currentColor'/%3E%3C/svg%3E");
+
+$badge-font-size:                   1em;
+$badge-padding-y:                   .65em;
+$badge-padding-x:                   .65em;
