--- a/resources/css/site.css
+++ b/resources/css/site.css
@@ -4,6 +4,7 @@
     background-size: cover;
     margin-top: 0 !important;
 }
+
 .no-gutters {
     margin-right: -14px !important;
     margin-left: -14px !important;
@@ -17,12 +18,15 @@
 .card-header {
     background-color: white;
 }
+
 h3.hc {
     font-size: 3rem;
 }
+
 .open-link a {
     color: white;
 }
+
 @media screen and (max-width: 440px) {
     .head {
         padding-top: 100px;
@@ -33,15 +37,9 @@ h3.hc {
     .second-parallax-home {
         background-position: center center;
     }
+
     .parallax-home {
         background-position: center center;
-    }
-
-    .hide {
-        padding-top: 5rem;
-    }
-    .division {
-        text-align: center;
     }
 
     .shout {
@@ -55,7 +53,6 @@ h3.hc {
     }
 }
 
-
 .bg-black {
     background-color: #000000 !important;
 }
@@ -66,9 +63,6 @@ h3.hc {
 
 .bg-maroon {
     background-color: maroon !important;
-}
-.bg-nav-cambridge {
-    background-color: #a3c1ad;
 }
 
 body {
@@ -82,9 +76,6 @@ body {
 h3, h2 {
     font-family: 'Roboto', sans-serif;
     font-weight: 500;
-}
-
-h3,h2 {
     font-size: 1.25rem;
 }
 
@@ -92,7 +83,7 @@ h3,h2 {
     background-color: white;
 }
 
-.card {
+.card-fitz {
     border: 0 !important;
 }
 
@@ -101,52 +92,12 @@ a {
     color: #731100;
     text-decoration: none;
 }
-
 article {
     overflow-wrap: break-word;
     word-wrap: break-word;
 }
-
-
-video {
-    object-fit: cover;
-}
-
-.share a {
-    color: #000;
-}
-
 .w3w a {
     color: #000;
-}
-
-@media only screen and (min-width: 768px) {
-    .logo {
-        margin-top: 100px !important;
-    }
-
-    .cd-top {
-        right: 20px;
-        bottom: 20px;
-    }
-}
-
-@media only screen and (min-width: 1024px) {
-    .cd-top {
-        height: 60px;
-        width: 60px;
-        right: 30px;
-        bottom: 30px;
-    }
-}
-#sponsors img {
-    margin-bottom: 10px;
-}
-
-.share li {
-    list-style: none;
-    margin-left: -40px;
-    font-size: 1rem;
 }
 
 #error {
@@ -154,75 +105,21 @@ video {
     width: 100%;
 }
 
-.contact .btn {
-    background-color: #731200;
-    color: #fff;
-}
-
-label.cm-app-label {
-    color: white;
-}
-
 .btn {
     white-space: normal !important;
     word-wrap: break-word;
 }
 
-.navbar nav {
-    display: inline;
-}
 
-.intro-card {
-    background-color: rgba(115, 18, 0, 0.1);
-}
 @media (max-width: 440px) {
     .shorten-words {
         max-width: 300px;
         display: inline-block
     }
-
-}
-
-.txt-intro {
-    text-align: left;
-    color: #686868;
-}
-
-.division {
-    border-top: 1px solid maroon;
-    margin-left: 10%;
-    margin-right: 10%;
-}
-
-/* Progress CSS */
-.progress {
-    background: maroon;
-    position: fixed;
-    top: 3.4rem;
-    bottom: auto;
-    left: 0;
-    width: 0;
-    height: 8px;
-    z-index: 10000;
-}
-
-.fit-image {
-    display: inline-block;
-}
-
-.minimum {
-    min-height: 200px;
 }
 
 .audio-player {
     min-height: 60px;
-}
-
-
-@media screen and (min-width: 441px) {
-    .hidden {
-        display: none;
-    }
 }
 
 @media screen and (min-width: 440px) {
@@ -230,42 +127,9 @@ label.cm-app-label {
         font-size: 5rem;
         font-weight: 500;
     }
-
     .shout-less {
         font-size: 4rem;
     }
-}
-
-.bg-black-opacity {
-    background-color: rgba(000, 0, 0, 0.7) !important;
-}
-
-.min-height-250 {
-    min-height: 250px;
-}
-
-#share {
-    display: inline-block;
-    float: none;
-}
-
-.covid-19 {
-    background-color: #a3c1ad;
-    min-height: 50px;
-    margin-top: 56px;
-    color: #000;
-    font-size: 1.2rem;
-    padding-top: 10px;
-    padding-bottom: 10px
-}
-
-.white {
-    color: white;
-}
-
-
-.cropped-image img {
-    object-fit: cover;
 }
 
 .gnw-map.fade {
@@ -274,10 +138,6 @@ label.cm-app-label {
 
 .gnw-map.fade:not(.show) {
     opacity: 0;
-}
-
-a.share-click {
-    color: white !important;
 }
 
 #panorama {
@@ -302,7 +162,6 @@ blockquote {
     li.page-item {
         display: none;
     }
-
     .page-item:first-child,
     .page-item:last-child,
     .page-item.active {
@@ -319,10 +178,6 @@ blockquote {
     max-height: 400px;
 }
 
-a.share {
-    color: black;
-    text-decoration: underline;
-}
 input#query {
     background-color: #ffffff;
     color: #000000;
@@ -334,11 +189,6 @@ input#query::placeholder {
 
 .search-results {
     min-height: 200px;
-}
-
-.ucam {
-    margin-bottom: -40px;
-    margin-top: 9px;
 }
 
 .parallax-home {
@@ -364,14 +214,6 @@ figcaption.figure-caption.text-right {
     color: rgba(0, 0, 0, 0.85) !important;
 }
 
-btn.btn.btn-wine.m-1 a {
-    color: white !important;
-}
-
-span.btn.btn-wine.m-1.p-2.share a {
-    color: white !important;
-}
-
 img.img-fluid.twitter {
     object-fit: cover;
     width: 308px;
@@ -382,10 +224,6 @@ img.img-fluid.twitter {
     list-style: square;
 }
 
-.container-fluid.remove {
-    padding-left: 0 !important;
-    padding-right: 0 !important;
-}
 
 @media only screen and (max-width: 1024px) {
     .head, .parallax {
@@ -402,27 +240,6 @@ img.img-fluid.twitter {
 .negative-padding {
     margin-left: -20px !important;
     margin-right: -20px !important;
-}
-
-
-.pagination, .breadcrumb {
-    background-color: #fff !important;
-}
-
-@media (max-width: 480px) {
-    ul.logos-sponsors li {
-        display: block;
-        list-style: none;
-        padding: 10px;
-        text-align: center !important;
-    }
-}
-
-.logos-sponsors img {
-    height: 86px;
-    margin-right: 10px;
-    margin-bottom: 10px;
-    display: inline-block;
 }
 
 .col-md-6.mb-3.mt-3.mx-auto.d-block.book {
@@ -553,16 +370,8 @@ h5 > a:hover::before {
     color: #000;
 }
 
-.social_box ul {
-    list-style: none;
-}
-
-.social_box li {
-    display: inline;
-}
-
 .navbar-dark .navbar-nav .nav-link {
-    color: #f5f5f5 !important;
+    color: #fff !important;
 }
 
 p.small-font {
@@ -706,6 +515,7 @@ ul.text-center.conversation-footer {
     float: right;
     transition: all 0.9s;
 }
+
 .panel-heading.active a:before {
     -webkit-transform: rotate(0deg);
     -moz-transform: rotate(0deg);
@@ -744,12 +554,8 @@ a.nav-link {
     -ms-transform: scale(1.02);
     -o-transform: scale(1.02);
     transform: scale(1.02);
-}
-
-.card-fitz:hover {
     background: #fff;
     box-shadow: 0 15px 26px rgba(0, 0, 0, 0.50);
-    /*box-shadow: 0px 15px 26px rgba(0, 0, 0, 0.50);*/
     -webkit-transition: all 0.2s ease-in;
     -moz-transition: all 0.2s ease-in;
     -ms-transition: all 0.2s ease-in;
@@ -761,7 +567,6 @@ a.nav-link {
     border-radius: 0;
     margin-bottom: 0;
 }
-
 
 a.text-center.btn.btn-outline-light.btn__book {
     border: 4px solid white;
@@ -776,6 +581,7 @@ a.text-center.btn.btn-outline-light.btn__book {
     bottom: 0;
     right: 0;
 }
+
 .hockney-title {
     font-size: 3.3rem;
 }
@@ -797,6 +603,7 @@ a.text-center.btn.btn-outline-light.btn__book {
     min-height: 40vh;
     background-color: #2a9941;
 }
+
 .ttn_header {
     min-height: 40vh;
     background-color: #8695be;
@@ -807,11 +614,13 @@ a.text-center.btn.btn-outline-light.btn__book {
     margin-top: 60px;
     background-color: #179d41;
 }
+
 .ttn_top_banner {
     min-height: 40vh;
     margin-top: 60px;
     background-color: #8695be;
 }
+
 .ttn_top_banner__home {
     min-height: 40vh;
     background-color: #8695be;
@@ -822,61 +631,116 @@ a.text-center.btn.btn-outline-light.btn__book {
     color: white;
 }
 
-.hockney__link a:hover,.hockney__link a:visited,.hockney__link a:focus {
+.hockney__link a:hover, .hockney__link a:visited, .hockney__link a:focus {
     text-decoration: none;
     color: white;
 }
 
 .hockney__link {
     min-height: 400px;
-    background: url('https://fitz-cms-images.s3.eu-west-2.amazonaws.com/banner-text-hockney.jpg') no-repeat center;
+    background: url('https://content.fitz.ms/fitz-website/assets/banner-text-hockney.jpg') no-repeat center;
     background-size: contain;
 }
+
 .ttn__link {
     min-height: 400px;
-    background: url('https://fitz-cms-images.s3.eu-west-2.amazonaws.com/ttn_right_panel.jpg') no-repeat center;
+    background: url('https://content.fitz.ms/fitz-website/assets/ttn_right_panel.jpg') no-repeat center;
     background-size: contain;
 }
 
 .hockney__link__href {
     display: block;
     height: 100%;
-    width:100%;
+    width: 100%;
 }
+
 .carousel-caption {
     position: initial;
 }
+
 .carousel-control-prev, .carousel-control-next {
     color: black;
 }
-.btn-hockney{color:#fff;background-color:#299942;border-color:#299942}
-.btn-hockney:hover{color:#fff;background-color:#299942;border-color:#299942}
-.btn-hockney:focus,.btn-hockney.focus{box-shadow:0 0 0 .2rem rgba(0,90,90,0.5)}
-.btn-hockney.disabled,.btn-hockney:disabled{color:#fff;background-color:#299942;border-color:#299942}
-.btn-hockney:not(:disabled):not(.disabled):active,.btn-hockney:not(:disabled):not(.disabled).active,.show>.btn-hockney.dropdown-toggle{color:#fff;background-color:#299942;border-color:#299942}
-.btn-hockney:not(:disabled):not(.disabled):active:focus,.btn-hockney:not(:disabled):not(.disabled).active:focus,.show>.btn-hockney.dropdown-toggle:focus{box-shadow:0 0 0 .2rem rgba(0,90,90,0.5)}
+
+.btn-hockney {
+    color: #fff;
+    background-color: #299942;
+    border-color: #299942
+}
+
+.btn-hockney:hover {
+    color: #fff;
+    background-color: #299942;
+    border-color: #299942
+}
+
+.btn-hockney:focus, .btn-hockney.focus {
+    box-shadow: 0 0 0 .2rem rgba(0, 90, 90, 0.5)
+}
+
+.btn-hockney.disabled, .btn-hockney:disabled {
+    color: #fff;
+    background-color: #299942;
+    border-color: #299942
+}
+
+.btn-hockney:not(:disabled):not(.disabled):active, .btn-hockney:not(:disabled):not(.disabled).active, .show > .btn-hockney.dropdown-toggle {
+    color: #fff;
+    background-color: #299942;
+    border-color: #299942
+}
+
+.btn-hockney:not(:disabled):not(.disabled):active:focus, .btn-hockney:not(:disabled):not(.disabled).active:focus, .show > .btn-hockney.dropdown-toggle:focus {
+    box-shadow: 0 0 0 .2rem rgba(0, 90, 90, 0.5)
+}
+
+.btn-ttn {
+    color: #fff;
+    background-color: #8695be;
+    border-color: #8695be
+}
+
+.btn-ttn:hover {
+    color: #fff;
+    background-color: #8695be;
+    border-color: #8695be
+}
+
+.btn-ttn:focus, .btn-ttn.focus {
+    box-shadow: 0 0 0 .2rem rgb(126, 143, 187)
+}
+
+.btn-ttn.disabled, .btn-ttn:disabled {
+    color: #fff;
+    background-color: #8695be;
+    border-color: #8695be
+}
+
+.btn-ttn:not(:disabled):not(.disabled):active, .btn-ttn:not(:disabled):not(.disabled).active, .show > .btn-ttn.dropdown-toggle {
+    color: #fff;
+    background-color: #8695be;
+    border-color: #8695be
+}
+
+.btn-ttn:not(:disabled):not(.disabled):active:focus, .btn-ttn:not(:disabled):not(.disabled).active:focus, .show > .btn-ttn.dropdown-toggle:focus {
+    box-shadow: 0 0 0 .2rem rgb(119, 138, 184)
+}
 
 .star_rating {
     font-size: 1.5rem;
 }
+
 .star_rating__color {
     color: #299942;
-}
-
-.btn-ttn{color:#fff;background-color:#8695be;border-color:#8695be}
-.btn-ttn:hover{color:#fff;background-color:#8695be;border-color:#8695be}
-.btn-ttn:focus,.btn-ttn.focus{box-shadow:0 0 0 .2rem rgb(126, 143, 187)
-}
-.btn-ttn.disabled,.btn-ttn:disabled{color:#fff;background-color:#8695be;border-color:#8695be}
-.btn-ttn:not(:disabled):not(.disabled):active,.btn-ttn:not(:disabled):not(.disabled).active,.show>.btn-ttn.dropdown-toggle{color:#fff;background-color:#8695be;border-color:#8695be}
-.btn-ttn:not(:disabled):not(.disabled):active:focus,.btn-ttn:not(:disabled):not(.disabled).active:focus,.show>.btn-ttn.dropdown-toggle:focus{box-shadow:0 0 0 .2rem rgb(119, 138, 184)
 }
 .footer__info {
     width: 330px;
 }
+
 .eden {
     filter: invert(1) sepia(1) saturate(5) hue-rotate(175deg);
 }
+
 .card-img-top {
     height: 100% !important;
 }
