--- a/resources/css/site.css
+++ b/resources/css/site.css
@@ -274,7 +274,22 @@ h5 > a:hover::before {
     transform: scaleX(1);
 }
 
-
+.btn-circle.btn-xl {
+    width: 50px;
+    height: 50px;
+    padding: 10px 16px;
+    border-radius: 35px;
+    font-size: 12px;
+    text-align: center;
+}
+form-control {
+    border-radius: 0px;
+}
+a {
+    background-color: transparent;
+    color: #731100;
+    text-decoration: none;
+}
 .free_ticket a {
     color: #fff !important;
 }
@@ -467,14 +482,6 @@ a.nav-link {
 .alert__jobs {
     border-radius: 0;
     margin-bottom: 0;
-}
-
-.btn {
-    border-radius: 0;
-}
-
-.form-control {
-    border-radius: 0;
 }
 
 a.text-center.btn.btn-outline-light.btn__book {
