--- a/resources/css/site.css
+++ b/resources/css/site.css
@@ -598,7 +598,7 @@ a.text-center.btn.btn-outline-light.btn__book {
     width: 330px;
 }
 .eden {
-    filter: invert(1) sepia(1) saturate(5) hue-rotate(175deg);
+    filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(100deg) brightness(100%) contrast(100%);
 }
 .card-img-top {
     height: 100% !important;
