--- a/public/css/fitzwilliam.css
+++ b/public/css/fitzwilliam.css
@@ -641,7 +641,14 @@ a.text-center.btn.btn-outline-light.btn__book {
     font-size: 1.15rem;
 }
 
-
+@media screen and (min-width: 993px) {
+    .btn-credit,
+    .btn-direct {
+        max-width: 85%;
+        width: 100%;
+        margin: 0 auto;
+    }
+}
 #btn-back-to-top {
     position: fixed;
     bottom: 20px;
