--- a/resources/css/site.css
+++ b/resources/css/site.css
@@ -606,50 +606,39 @@ a.text-center.btn.btn-outline-light.btn__book {
 
 .p-heading {
     font-weight: 500;
-}
+  }
 
-.p-container {
-    flex-direction: column-reverse;
-    padding: 40px;
-}
-
-.p-container--single {
-    color:#299942;
-}
-
-.p-container--joint {
-    color: #165181;
-    margin-bottom: 16px;
-}
-
-.p-image {
+  .p-container .card {
+    width: 100%;
+  }
+  .p-container--joint figure,
+  .p-container--single figure {
+    margin: 1rem 0 !important;
+  }
+  
+  .p-image {
     margin: 0 auto;
-    max-width: 30%;
-}
-
-/* 
-
-https://codepen.io/sosuke/pen/Pjoqqp - this tool is used generate filter values based on desired #hex value.
-*/
-.p-image--single {
-    filter: invert(47%) sepia(44%) saturate(738%) hue-rotate(82deg) brightness(93%) contrast(89%);
-}
-
-.p-image--joint {
-    filter: invert(25%) sepia(77%) saturate(564%) hue-rotate(165deg) brightness(95%) contrast(97%);
-}
-
-.btn-credit,
-.btn-direct {
+    object-fit: cover;
+    height: 100%;
+  }
+  
+  .btn-credit,
+  .btn-direct {
+    margin-top: 16px;
     font-size: 1.15rem;
     padding: 18px 36px;
-}
+  }
 
-@media screen and (min-width: 993px) {
+  .btn-direct:focus {
+    background: #299942;
+    color: #fff;
+  }
+
+  @media screen and (min-width: 993px) {
     .btn-credit,
     .btn-direct {
         margin: 0 auto;
         max-width: 85%;
         width: 100%;
     }
-}
+  }
