--- a/resources/css/site.css
+++ b/resources/css/site.css
@@ -651,10 +651,6 @@ a.text-center.btn.btn-outline-light.btn__book {
     z-index: 100;
 }
 
-.parallax {
-    min-height: 83vh;
-}
-
 .parallax-home {
     min-height: 0;
     height: 280px;
@@ -689,9 +685,12 @@ a.text-center.btn.btn-outline-light.btn__book {
         flex-direction: column;
         align-items: flex-start;
         justify-content: flex-end;
+        padding: 0 16px 32px 16px;
     }
 }
-
+.home-hero .parallax {
+    min-height: 70vh;
+}
 .home-hero .wrapper {
     width: 100%;
     display: flex;
@@ -701,9 +700,14 @@ a.text-center.btn.btn-outline-light.btn__book {
 .home-hero .wrapper h1 {
     color: #FFF;
     font-size: 80px;
-    font-style: normal;
     font-weight: 500;
-    line-height: normal;
+    padding-top: 300px;
+}
+
+@media screen and (min-width: 768px) {
+    .home-hero .wrapper h1 {
+        padding-top: 0;
+    }
 }
 
 .home-hero .wrapper p {
@@ -746,13 +750,11 @@ a.text-center.btn.btn-outline-light.btn__book {
     width: 100%;
 }
 
-.container-home-card h3 {
+.container-home-cards h3 {
     grid-row: 1 / 2;
     grid-column: 1 / -1;
     font-size: 24px;
-    font-style: normal;
     font-weight: 500;
-    line-height: normal;
 }
 
 .container-home-cards .row-home {
@@ -761,6 +763,16 @@ a.text-center.btn.btn-outline-light.btn__book {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
     grid-gap: 10px;
+}
+
+.container-home-cards h2 {
+    grid-column: 1 / -1;
+}
+
+.container-home-cards h3 a {
+    font-size: 24px;
+    font-weight: 500;
+    display: block;
 }
 
 .container-home-card .card-image {
@@ -779,5 +791,4 @@ a.text-center.btn.btn-outline-light.btn__book {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    object-position: 65% 15%;
 }
