Include Bootstrap utility classes to the built CSS

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -3,5 +3,6 @@
 // Variables
 @import 'variables';
 @import "~bootstrap/scss/bootstrap";
+@import "~bootstrap/scss/utilities/api";
 @import "extend-bootstrap";
 
